fixed footer on mobile
fixed the footer to fit all screen sizes

--- a/style.css
+++ b/style.css
@@ -761,7 +761,7 @@
    color: #1A1A1D;
 }
 .footer{
-   width: 997.5px;
+   width: auto;
    padding:75px 15% 60px;
    background: #e80247;
    color: #1A1A1D;
